feat: 강아지 주인 클릭시 프로필 이동 구현

--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -8,6 +8,10 @@
         <variable
             name="footprintPetDetail"
             type="com.happy.friendogly.presentation.ui.woof.uimodel.FootprintInfoPetDetailUiModel" />
+
+        <variable
+            name="actionHandler"
+            type="com.happy.friendogly.presentation.ui.woof.WoofActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,6 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:onClick="@{() -> actionHandler.clickFootprintMemberName(footprintPetDetail.memberId)}"
             app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
             app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
             tools:text="누누네 댕댕이" />
