--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
+            android:src="@drawable/img_acorm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
