--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -7,9 +7,6 @@
         <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.group.add.GroupAddViewModel" />
-        <variable
-            name="actionHandler"
-            type="com.happy.friendogly.presentation.ui.group.add.GroupAddActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -35,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:background="@drawable/ripple_circle_white"
-            android:onClick="@{()->actionHandler.cancelAddGroup()}"
+            android:onClick="@{()->vm.cancelAddGroup()}"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="@id/view_group_add_top_bar"
             app:layout_constraintStart_toStartOf="@id/view_group_add_top_bar"
@@ -63,37 +60,44 @@
             app:layout_constraintBottom_toTopOf="@id/tv_group_add_prev_button" />
 
         <TextView
-            onSingleClick="@{()->actionHandler.navigatePrevPage()}"
+            onSingleClick="@{()->vm.navigatePrevPage()}"
             android:id="@+id/tv_group_add_prev_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/rect_white_fill_radius8"
-            android:backgroundTint="@color/coral400"
+            tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            tools:background="@drawable/rect_white_fill_radius8"
+            tools:backgroundTint="@color/coral400"
+            tools:textColor="@color/white"
+            app:validButtonBackground = "@{vm.isValidPrevPage()}"
+            app:validButtonStyle = "@{vm.isValidPrevPage()}"
+            android:clickable="@{vm.isValidPrevPage()}"
             android:textColor="@color/white"
             android:gravity="center"
             android:padding="16dp"
             android:text="@string/group_list_prev_btn"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_group_add_next_button"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            onSingleClick="@{()->actionHandler.navigateNextPage()}"
+            onSingleClick="@{()->vm.navigateNextPage()}"
             android:id="@+id/tv_group_add_next_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:background="@drawable/rect_white_fill_radius8"
+            tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            tools:background="@drawable/rect_white_fill_radius8"
+            tools:backgroundTint="@color/coral400"
+            tools:textColor="@color/white"
+            app:validButtonBackground = "@{vm.isValidNextPage()}"
+            app:validButtonStyle = "@{vm.isValidNextPage()}"
+            android:clickable="@{vm.isValidNextPage()}"
             android:gravity="center"
             android:padding="16dp"
             android:text="@string/group_list_next_btn"
-            android:backgroundTint="@color/coral400"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
