feat: 그룹 생성 로직 구현

--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -67,8 +67,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="20dp"
             tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            tools:background="@drawable/rect_white_fill_radius8"
-            tools:backgroundTint="@color/coral400"
+            android:background="@drawable/rect_coral04_fill_8"
             tools:textColor="@color/white"
             app:validButtonBackground = "@{vm.isValidPrevPage()}"
             app:validButtonStyle = "@{vm.isValidPrevPage()}"
@@ -89,8 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            tools:background="@drawable/rect_white_fill_radius8"
-            tools:backgroundTint="@color/coral400"
+            android:background="@drawable/rect_coral04_fill_8"
             tools:textColor="@color/white"
             app:validButtonBackground = "@{vm.isValidNextPage()}"
             app:validButtonStyle = "@{vm.isValidNextPage()}"
