--- a/android/app/src/main/res/layout/fragment_group_add_filter.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_filter.xml
@@ -86,6 +86,7 @@
             app:flexWrap="wrap">
 
             <include
+                android:id="@+id/include_add_group_smail"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -94,6 +95,7 @@
                 app:filterName="@{GroupFilter.SMALL_DOG_NAME}" />
 
             <include
+                android:id="@+id/include_add_group_medium"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -102,6 +104,7 @@
                 app:filterName="@{GroupFilter.MEDIUM_DOG_NAME}" />
 
             <include
+                android:id="@+id/include_add_group_big"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -145,6 +148,7 @@
             app:flexWrap="wrap">
 
             <include
+                android:id="@+id/include_add_group_male"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -154,6 +158,7 @@
                 app:filterName="@{GroupFilter.MALE_NAME}" />
 
             <include
+                android:id="@+id/include_add_group_neutralizing_female"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -163,6 +168,7 @@
                 app:filterName="@{GroupFilter.NEUTRALIZING_FEMALE_NAME}" />
 
             <include
+                android:id="@+id/include_add_group_female"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,6 +178,7 @@
                 app:filterName="@{GroupFilter.FEMALE_NAME}" />
 
             <include
+                android:id="@+id/include_add_group_neutralizing_male"
                 layout="@layout/include_add_dog_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
