--- a/android/app/src/main/res/layout/fragment_group_add_information.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_information.xml
@@ -39,6 +39,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:text="@{vm.myAddress.subLocality}"
                     style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
