--- a/android/app/src/main/res/layout/fragment_group_add_information.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_information.xml
@@ -46,6 +46,7 @@
                     tools:text="잠실 6동" />
 
                 <TextView
+                    android:layout_marginStart="3dp"
                     style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
