[AN] feat: 그룹 추가 도메인 적용과 api 구체화 (#305)

--- a/android/app/src/main/res/layout/fragment_group_add_information.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_information.xml
@@ -39,12 +39,14 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:text="@{vm.myAddress.subLocality}"
                     style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="잠실 6동" />
 
                 <TextView
+                    android:layout_marginStart="3dp"
                     style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
