--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -101,8 +101,8 @@
         <TextView
             android:id="@+id/tv_woof_walk_status"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            changedWalkStatusTime="@{vm.footprintWalkStatus.changedWalkStatusTime}"
-            walkStatus="@{vm.footprintWalkStatus.walkStatus}"
+            changedWalkStatusTime="@{vm.footprintInfoWalkStatus.changedWalkStatusTime}"
+            walkStatus="@{vm.footprintInfoWalkStatus.walkStatus}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
