fix: api response 오류 수정

--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -68,13 +68,13 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rect_coral04_fill_8"
-            android:clickable="@{vm.isValidPrevPage()}"
+            android:clickable="@{vm.validPrevPage}"
             tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             tools:background="@drawable/rect_white_fill_radius8"
             tools:backgroundTint="@color/coral400"
             tools:textColor="@color/white"
-            app:validButtonBackground = "@{vm.isValidPrevPage()}"
-            app:validButtonStyle = "@{vm.isValidPrevPage()}"
+            app:validButtonBackground = "@{vm.validPrevPage}"
+            app:validButtonStyle = "@{vm.validPrevPage}"
             android:textColor="@color/white"
             android:gravity="center"
             android:text="@string/group_list_prev_btn"
@@ -91,14 +91,14 @@
             android:layout_height="56dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rect_coral04_fill_8"
-            android:clickable="@{vm.isValidNextPage()}"
+            android:clickable="@{vm.validNextPage}"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/tv_group_add_prev_button"
-            app:validButtonBackground="@{vm.isValidNextPage()}"
-            app:validButtonStyle="@{vm.isValidNextPage()}"
+            app:validButtonBackground="@{vm.validNextPage}"
+            app:validButtonStyle="@{vm.validNextPage}"
             app:validNextButtonText="@{vm.currentPage}"
             tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             tools:text="다음"
