--- a/android/app/src/main/res/layout/activity_group_detail.xml
+++ b/android/app/src/main/res/layout/activity_group_detail.xml
@@ -138,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintTop_toBottomOf="@id/view_group_detail_line"
                 tools:listitem="@layout/item_filter" />
 
