--- a/android/app/src/main/res/layout/bottom_sheet_group_menu.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_group_menu.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content">
 
                 <FrameLayout
-                    app:myVisibleMenu = "@{vm.groupDetailViewType}"
+                    app:myParticipation = "@{vm.groupDetailViewType}"
                     onSingleClick="@{()->vm.selectDelete()}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
