--- a/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
@@ -6,121 +6,144 @@
     <data>
 
         <variable
-            name="petDetail"
-            type="com.happy.friendogly.presentation.ui.petdetail.PetDetail" />
+            name="footprintPetDetail"
+            type="com.happy.friendogly.presentation.ui.woof.uimodel.FootprintInfoPetDetailUiModel" />
 
-
+        <variable
+            name="actionHandler"
+            type="com.happy.friendogly.presentation.ui.woof.WoofActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_woof_foot_print"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginVertical="10dp"
+        android:background="@drawable/rect_white_fill_30"
+        android:elevation="10dp"
+        android:paddingVertical="20dp">
 
-
-        <ImageView
-            android:id="@+id/iv_dog_profile"
-            urlToImage="@{petDetail.imageUrl}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/img_acorm"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_woof_dog"
+            glide="@{footprintPetDetail.petDetail.imageUrl}"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="20dp"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:src="@drawable/img_acorm" />
+            app:shapeAppearanceOverlay="@style/RoundBig"
+            tools:src="@drawable/img_dog" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/rect_black_gradient_fill"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_dog_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.4"
-            app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/tv_woof_dog_name"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:text="@{footprintPetDetail.petDetail.name}"
+            app:layout_constraintBottom_toTopOf="@id/tv_woof_member_name"
+            app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
+            app:layout_constraintTop_toTopOf="@id/iv_woof_dog"
+            tools:text="땡이" />
 
-            <TextView
-                android:id="@+id/tv_dog_name"
-                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:text="@{petDetail.name}"
-                android:textColor="@color/white"
-                android:textSize="32dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_description"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_description"
-                tools:text="도토리" />
+        <TextView
+            android:id="@+id/tv_woof_member_name"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+            memberName="@{footprintPetDetail.memberName}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:onClick="@{() -> actionHandler.clickFootprintMemberName(footprintPetDetail.memberId)}"
+            app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+            tools:text="누누네 댕댕이" />
 
+        <TextView
+            android:id="@+id/tv_woof_dog_information"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/woof_information"
+            app:layout_constraintBottom_toTopOf="@id/tv_woof_dog_age"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_woof_dog" />
 
-            <TextView
-                android:id="@+id/tv_dog_birthday"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:textColor="@color/white"
-                app:age="@{petDetail.age}"
-                app:isAtLeastOneYearOld="@{petDetail.isAtLeastOneYearOld}"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_dog_name"
-                app:layout_constraintStart_toEndOf="@+id/tv_dog_name"
-                app:layout_constraintTop_toTopOf="@+id/tv_dog_name"
-                tools:text="(2개월)" />
+        <TextView
+            android:id="@+id/tv_woof_dog_age"
+            style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+            petAge="@{footprintPetDetail.petDetail.birthDate}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rect_coral300_fill_20"
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="7dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
+            tools:text="11살" />
 
-            <ImageView
-                android:id="@+id/iv_dog_gender"
-                genderDrawable="@{petDetail.gender}"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="6dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_dog_birthday"
-                app:layout_constraintStart_toEndOf="@+id/tv_dog_birthday"
-                app:layout_constraintTop_toTopOf="@+id/tv_dog_birthday"
-                tools:src="@drawable/img_dog_male" />
+        <TextView
+            android:id="@+id/tv_woof_dog_size"
+            style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+            petSizeType="@{footprintPetDetail.petDetail.sizeType}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rect_coral300_fill_20"
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="7dp"
+            app:layout_constraintStart_toEndOf="@id/tv_woof_dog_age"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
+            tools:text="소형견" />
 
+        <TextView
+            android:id="@+id/tv_woof_dog_gender"
+            style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+            petGender="@{footprintPetDetail.petDetail.gender}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rect_coral300_fill_20"
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="7dp"
+            app:layout_constraintStart_toEndOf="@id/tv_woof_dog_size"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
+            tools:text="암컷" />
 
-            <TextView
-                android:id="@+id/tv_dog_description"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{petDetail.description}"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_size"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_size"
-                tools:text="우리 강아지는 사람을 좋아해요" />
+        <TextView
+            android:id="@+id/tv_woof_dog_description_title"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/woof_description"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_age" />
 
-            <TextView
-                android:id="@+id/tv_dog_size"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                app:dogSize="@{petDetail.sizeType}"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_neutering"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_neutering"
-                tools:text="소형견이에요" />
-
-            <TextView
-                android:id="@+id/tv_dog_neutering"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="60dp"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:neuteredTitle="@{petDetail.gender}"
-                tools:text="중성화를 했어요" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+        <TextView
+            android:id="@+id/tv_woof_dog_description"
+            style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rect_coral100_fill_12"
+            android:maxLines="2"
+            android:minHeight="60dp"
+            android:padding="15dp"
+            android:text="@{footprintPetDetail.petDetail.description}"
+            android:textColor="@color/gray800"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_description_title"
+            tools:text="땡이는 사람을 좋아해요! 땡이를 보게 되면 말 걸어주세요!!" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
