[AN] fix: 멍개 API 테스트와 버그 수정 (#315)

--- a/android/app/src/main/res/layout/item_dog_select_profile.xml
+++ b/android/app/src/main/res/layout/item_dog_select_profile.xml
@@ -34,6 +34,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect_black_gradient_fill"
         android:orientation="vertical"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
