feat: 로컬 환경에 맞춰서 코드 수정

--- a/android/app/src/main/res/layout/item_chat_other.xml
+++ b/android/app/src/main/res/layout/item_chat_other.xml
@@ -17,6 +17,19 @@
         android:layout_marginVertical="10dp">
 
         <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_chat_default_user"
+            android:src="@drawable/img_profile_normal"
+            android:layout_width="32dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="5dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/RoundXSmall" />
+
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_chat_user"
             glide="@{profileUrl}"
             android:layout_width="32dp"
@@ -28,16 +41,17 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/Circle" />
+            app:shapeAppearanceOverlay="@style/RoundXSmall" />
 
         <TextView
             android:id="@+id/tv_chat_user_nickname"
             style="@style/Theme.AppCompat.TextView.Medium.Black.Size16"
             android:layout_width="wrap_content"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toEndOf="@id/iv_chat_user"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_chat_user"
             tools:text="에디" />
 
         <LinearLayout
@@ -46,7 +60,7 @@
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_chat_user_nickname"
+            app:layout_constraintStart_toEndOf="@id/iv_chat_user"
             app:layout_constraintTop_toBottomOf="@id/tv_chat_user_nickname">
 
             <TextView
@@ -55,9 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/rect_gray03_fill_16"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="11dp"
+                android:paddingHorizontal="12dp"
+                android:paddingBottom="11dp"
                 android:textColor="@color/black"
                 tools:text="채드야 도토리 사진 좀 많이 올려봐봐 레퍼런스 부족하다니깐그러네" />
 
@@ -70,6 +83,7 @@
                 android:minWidth="100dp"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="2dp"
+                android:visibility="gone"
                 android:layout_weight="0"
                 app:layout_constraintBottom_toBottomOf="@id/tv_chat_other_message"
                 app:layout_constraintEnd_toEndOf="parent"
