refactor: 클럽 리스트 재활용 가능하도록 수정

--- a/android/app/src/main/res/layout/bottom_sheet_participation_filter_selector.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_participation_filter_selector.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.happy.friendogly.presentation.ui.club.model.clubfilter.ParticipationFilter" />
+        <import type="com.happy.friendogly.presentation.ui.club.common.model.clubfilter.ParticipationFilter" />
 
         <variable
             name="vm"
