refactor: 클럽 액션 핸들러 재활용 가능하도록 수정

--- a/android/app/src/main/res/layout/fragment_club_list.xml
+++ b/android/app/src/main/res/layout/fragment_club_list.xml
@@ -123,8 +123,7 @@
                     android:id="@+id/include_club_list"
                     layout="@layout/include_club_list_content"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:vm="@{vm}" />
+                    android:layout_height="match_parent" />
 
                 <include
                     android:id="@+id/include_club_address"
